--- a/src/index.html
+++ b/src/index.html
@@ -36,18 +36,22 @@
                 <span class="main__text-second">learn more</span>
             </div>
         </nav>
-        <!-- <div class="column">
-            <p>The best looks; Top Comfort</p>
-            <h1>Comfy Maxer</h1>
-            <p>Our shoes fuse together an insole that cushions every move, laces that you’ll never need to tie
-                again, and an odor-fighting copper thread lining.</p>
-            <p>
-                <button>
+        <div class="center-info">
+            <span class="center-info__text">The best looks; Top Comfort</span>
+            <h1 class="">Comfy Maxer</h1>
+            <span>Our shoes fuse together an insole that cushions every move, laces that you’ll never need to tie
+                again, and an odor-fighting copper thread lining.</span>
+            <div>
+                <button class="button button_add">
                     <img src="./assets/img/bag.png" alt="" style="vertical-align:middle">
                     Add To Cart
                 </button>
-            </p>
-        </div> -->
+                <button class="button button_watch">
+                    <img src="./assets/img/play.svg" alt="" style="vertical-align:middle">
+                    Watch intro
+                </button>
+            </div>
+        </div>
         <div class="column_vertical">
             <nav class="main__information">
                 <a href="" class="main__link">manufacturing</a>
