add second page

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
 <body class="parent">
     <header class="header">
-        <span class="header__title">Zainoo&trade;</span>
+        <a href="./index.html" class="header__title">Zainoo&trade;</a>
         <nav class="header__icons">
-            <img class="header__icon" src="./assets/img/search.svg"></img>
-            <img class="header__icon" src="./assets/img/basket.svg"></img>
-            <img class="header__icon" src="./assets/img/person.svg"></img>
+            <img class="header__icon" src="./assets/img/search.svg">
+            <img class="header__icon" src="./assets/img/basket.svg">
+            <img class="header__icon" src="./assets/img/person.svg">
         </nav>
     </header>
 
@@ -25,7 +25,7 @@
             <div class="menu">
                 <a href="" class="menu__element">Shoes</a>
                 <a href="" class="menu__element">Bags</a>
-                <a href="" class="menu__element">Accessories</a>
+                <a href="./catalog.html" class="menu__element">Accessories</a>
                 <a href="" class="menu__element">Support</a>
             </div>
             <p class="main__text-first"><span class="main__text-first_color">Extra</span> Foot <br>
