--- a/src/catalog.html
+++ b/src/catalog.html
@@ -8,6 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="parent">
@@ -20,74 +21,123 @@
         </nav>
     </header>
 
-    <main class="main">
+    <main class="main-catalog">
         <div class="column">
             <div class="row">
                 <div class="product">
                     <img src="./assets/img/goods/Product_1.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span class="description">Vintage Typewriter to post awesome stories about UI design and
+                        webdev.</span>
+                    <span class="price">$49.50</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_2.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Lee Pucker design. Leather botinki for handsome designers. Free shipping.</span>
+                    <span class="price">$13.95</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_3.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Timesaving kitten to save months on development. Playful, cute, cheap!</span>
+                    <span class="price">$128.99</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_4.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Plastic useless plugs and tubes for high-fidelity prototyping. Fit & Eat!</span>
+                    <span class="price">$12.48</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="product">
                     <img src="./assets/img/goods/Product_5.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Creativity stimulating lotion. Drink every morning to generate better ideas!</span>
+                    <span class="price">$12.48</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_6.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Prototyping items to create a lot if useless things...</span>
+                    <span class="price">$128.99</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_7.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>John Von Ebalkin SPRING</span>
+                    <span class="price">$13.95</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_8.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Envelope, Stripes, Pencil and etc. Purchase this kit today and feel OKAY</span>
+                    <span class="price">$9.50</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="product"> <img src="./assets/img/goods/Product_9.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Professional teadrinking set for every designer and developer</span>
+                    <span class="price">$128.99</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_10.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>One string Bonsai description</span>
+                    <span class="price">$11.68</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_11.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>Simply best item in town to shine bright with your Nine Inch Nails</span>
+                    <span class="price">$1.25</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_12.png" alt="">
-                    <span>some name</span>
-                    <span>price</span>
-                    <button>add to cart</button>
+                    <span>KISTOCHKI & KRASIBO. Top cosmetics brand from Chelyabinsk is here!</span>
+                    <span class="price">$23.25</span>
+                    <div class="footer">
+                        <span class="rating">stars</span>
+                        <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
+                                style="vertical-align:middle">add to cart</button>
+                    </div>
                 </div>
             </div>
         </div>
