changes in catalog

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -32,7 +32,9 @@
                     <div class="footer">
                         <span class="rating">stars</span>
                         <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
-                                style="vertical-align:middle">add to cart</button>
+                                style="vertical-align:middle">
+                                <span class="button-text">Add to cart</span>
+                            </button>
                     </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_2.png" alt="">
@@ -80,7 +82,9 @@
                     <div class="footer">
                         <span class="rating">stars</span>
                         <button class="product__add"> <img src="./assets/img/heart.svg" alt=""
-                                style="vertical-align:middle">add to cart</button>
+                                style="vertical-align:middle"> 
+                                <span class="button-text">add to cart</span>
+                        </button>
                     </div>
                 </div>
                 <div class="product"> <img src="./assets/img/goods/Product_7.png" alt="">
@@ -142,6 +146,7 @@
             </div>
         </div>
     </main>
+    <link rel="stylesheet/scss" href="./assets/catalog_styles.scss">
 </body>
 
 </html>
