--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
     <main class="main">
         <nav class="main-nav">
             <div class="menu">
-                <a href="" class="menu__element">Shoes</a>
-                <a href="" class="menu__element">Bags</a>
+                <a href="./catalog.html" class="menu__element">Shoes</a>
+                <a href="./catalog.html" class="menu__element">Bags</a>
                 <a href="./catalog.html" class="menu__element">Accessories</a>
-                <a href="" class="menu__element">Support</a>
+                <a href="./catalog.html" class="menu__element">Support</a>
             </div>
             <p class="main__text-first"><span class="main__text-first_color">Extra</span> Foot <br>
                 <span class="main__text-first_color">Care </span> Tech
