--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,7 @@
 </head>
 
 <body class="parent">
-    <header class="header">
-        <a href="./index.html" class="header__title">Zainoo&trade;</a>
-        <nav class="header__icons">
-            <img class="header__icon" src="./assets/img/search.svg">
-            <img class="header__icon" src="./assets/img/basket.svg">
-            <img class="header__icon" src="./assets/img/person.svg">
-        </nav>
-    </header>
-
+    <header class="header"></header>
     <main class="main">
         <nav class="main-nav">
             <div class="menu">
@@ -64,7 +56,7 @@
             <nav class="main__social-networks">
                 <a href="" class="main__link">fb</a>
                 <a href="" class="main__link">tw</a>
-                <a href="" class="main__link">in</a>          
+                <a href="" class="main__link">in</a>
             </nav>
 
         </div>
