--- a/src/catalog.html
+++ b/src/catalog.html
@@ -13,9 +13,9 @@
         rel="stylesheet">
 </head>
 
-<body class="parent">
+<body class="parent-catalog">
     <header class="header"></header>
-    <main>
+    <main class="catalog">
         <ul id="products" class="products">
         </ul>
     </main>
